# portal

./: .env.development  .env.example  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.js  .prettierrc.json  .vercelignore  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: lint.yaml
.husky/: pre-commit
app/: next.config.mjs  package-lock.json  package.json
app/public/: sw.js.map
app/public/html-flappy-bird/: index.html
app/public/html-flappy-bird-ghost/: index.html
app/src/app/: layout.tsx  page.tsx
backend/docs/: windfall_en.yaml
backend/fastapi/: app.py
beatpet-unity/: .gitignore  mono_crash.0.0.json  mono_crash.0.1.json
beatpet-unity/ProjectSettings/: ProjectSettings.asset  TagManager.asset
programs/blinks/: Anchor.toml  README.md  package.json
programs/raffle/: Anchor.toml  Cargo.toml  README.md  env.sample  package-lock.json  package.json
programs/raffle/programs/raffle/: Cargo.toml
programs/raffle/programs/raffle/src/: constants.rs  errors.rs  lib.rs  states.rs
programs/raffle/programs/raffle/src/instructions/: add_prize_to_raffle.rs  close_raffle.rs  compress.rs  decompress.rs  delegate.rs  draw.rs  mod.rs  new_raffle.rs  redeem.rs  undelegate.rs
programs/raffle/tests/: raffle.ts
programs/staking/: Anchor.toml  Fdim.json  README.md  package-lock.json  package.json
programs/staking/programs/staking/: Cargo.toml
programs/staking/programs/staking/src/: constants.rs  lib.rs  states.rs
programs/staking/programs/staking/src/instructions/: close_user_info.rs  mod.rs  new_user_info.rs  stake.rs
public/: manifest.json
public/game-only-logic/: index.html
public/game-with-design/: index.html
public/roulette-game/: index.html
public/webgl/: index.html
pwa/: next.config.mjs  package-lock.json  package.json
pwa/public/: manifest.json
services/auth/: .env.sample  Dockerfile  package-lock.json  package.json  tsconfig.json
src/: middleware.ts
src/app/: layout.tsx  mock_games.json  mock_users.json  page.tsx  providers.tsx
src/components/: AlertDialog.tsx  AlertDialogs.tsx  CustomWalletMultiButton.tsx  Footer.tsx  Games.tsx  Header.tsx  Info.tsx  InternalLayout.tsx  Loading.tsx  Nextaction.tsx  PopupResultDeposit.tsx  Ranker.tsx  RouletteGameWithAuth.tsx  SeasonResult.tsx  SectionTitle.tsx  StatusBar.tsx  TopKv.tsx  Toptab.tsx  WebGLGameWithAuth.tsx  form.tsx
src/contexts/: AuthContext.tsx  ProgrammableWalletContext.tsx  ProgrammableWalletsContext.tsx  TelegramContext.tsx
src/hooks/: useAddPoints.ts  useAuth.tsx  useDepositSol.ts  useNetworkSelector.ts  usePoints.ts  useProgrammableWallet.tsx  useProgrammableWallets.tsx  useSolanaWallet.tsx  useTelegram.tsx  useTransaction.ts  useWithdrawSol.ts  vault.json
src/lib/: auth.ts  db.ts  programmable-wallet.ts  programmable-wallets.ts  solana-wallet.ts  telegram.ts  utils.ts
src/providers/: AuthProvider.tsx  ProgrammableWalletProvider.tsx  ProgrammableWalletsProvider.tsx  SolanaWalletProvider.tsx  TelegramProvider.tsx  index.tsx
src/server-actions/: protected.ts
src/styles/: globals.css
src/types/: auth-provider.d.ts  auth-token-payload.d.ts  telegram-user.d.ts  telegram-web-app.d.ts  user.d.ts
src/utils/: solana-handlers.ts
telegram-web-app/: package-lock.json  package.json
telegram-web-app/src/: constant.ts  env.ts
(+216 files in other folders)
