[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]

# Anchor
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"

# Anchor compatibility
borsh = "0.10.0"

# Light Protocol
light-client = { path = "../light-protocol/client", version = "0.9.1" }
light-concurrent-merkle-tree = { path = "../light-protocol/merkle-tree/concurrent", version = "1.1.0" }
light-hasher = { path = "../light-protocol/merkle-tree/hasher", version = "1.1.0" }
light-indexed-merkle-tree = { path = "../light-protocol/merkle-tree/indexed", version = "1.1.0" }
light-macros = { path = "../light-protocol/macros/light", version = "1.1.0" }
light-merkle-tree-reference = { path = "../light-protocol/merkle-tree/reference", version = "1.1.0" }
light-prover-client = { path = "../light-protocol/circuit-lib/light-prover-client", version = "1.2.0" }
light-sdk = { path = "../light-protocol/sdk", version = "0.11.0" }
light-sdk-macros = { path = "../light-protocol/macros/light-sdk-macros", version = "0.4.0" }
light-utils = { path = "../light-protocol/utils", version = "1.1.0" }
light-verifier = { path = "../light-protocol/circuit-lib/verifier", version = "1.1.0" }
photon-api = { path = "../light-protocol/photon-api", version = "0.45.0" }
forester-utils = { path = "../light-protocol/forester-utils", version = "1.2.0" }
light-hash-set = { path = "../light-protocol/merkle-tree/hash-set", version = "1.2.0" }
account-compression = { path = "../light-protocol/programs/account-compression", version = "1.2.0", features = ["cpi"] }
light-compressed-token = { path = "../light-protocol/programs/compressed-token", version = "1.2.0", features = ["cpi"] }
light-system-program = { path = "../light-protocol/programs/system", version = "1.2.0", features = ["cpi"] }
light-registry = { path = "../light-protocol/programs/registry", version = "1.2.0",  features = ["cpi"]}
